dart/plugin/plugin.h

typedef struct plugin_string_t {
  uint8_t*ptr;
  size_t len;
} plugin_string_t;
typedef struct flutter_renderer_alignment_own_alignment_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_t;
typedef struct flutter_renderer_alignment_borrow_alignment_t {
  int32_t __handle;
} flutter_renderer_alignment_borrow_alignment_t;
typedef struct flutter_renderer_alignment_own_alignment_directional_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_directional_t;
typedef struct flutter_renderer_enums_main_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_alignment_t;
typedef struct flutter_renderer_enums_text_direction_t {
  uint8_t tag;
} flutter_renderer_enums_text_direction_t;
typedef struct flutter_renderer_enums_vertical_direction_t {
  uint8_t tag;
} flutter_renderer_enums_vertical_direction_t;
typedef struct flutter_renderer_enums_main_axis_size_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_size_t;
typedef struct flutter_renderer_enums_text_baseline_t {
  uint8_t tag;
} flutter_renderer_enums_text_baseline_t;
typedef struct flutter_renderer_enums_cross_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_cross_axis_alignment_t;
typedef flutter_renderer_enums_cross_axis_alignment_t flutter_renderer_widget_cross_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_alignment_t flutter_renderer_widget_main_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_size_t flutter_renderer_widget_main_axis_size_t;
typedef flutter_renderer_enums_text_direction_t flutter_renderer_widget_text_direction_t;
typedef flutter_renderer_enums_text_baseline_t flutter_renderer_widget_text_baseline_t;
typedef flutter_renderer_enums_vertical_direction_t flutter_renderer_widget_vertical_direction_t;
typedef struct flutter_renderer_widget_own_row_t {
  int32_t __handle;
} flutter_renderer_widget_own_row_t;
typedef struct flutter_renderer_widget_own_col_t {
  int32_t __handle;
} flutter_renderer_widget_own_col_t;
typedef struct flutter_renderer_widget_own_text_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_t;
typedef struct flutter_renderer_widget_own_text_rich_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_rich_t;
typedef struct flutter_renderer_widget_widget_t {
  uint8_t tag;
  union {
    flutter_renderer_widget_own_col_t     col;
    flutter_renderer_widget_own_row_t     row;
    flutter_renderer_widget_own_text_t     text;
    flutter_renderer_widget_own_text_rich_t     text_rich;
  } val;
} flutter_renderer_widget_widget_t;
typedef struct {
  flutter_renderer_widget_widget_t *ptr;
  size_t len;
} flutter_renderer_widget_list_widget_t;
typedef flutter_renderer_widget_widget_t flutter_renderer_renderer_widget_t;
typedef struct flutter_renderer_renderer_error_t {
  uint8_t tag;
} flutter_renderer_renderer_error_t;
typedef struct flutter_renderer_renderer_own_renderer_t {
  int32_t __handle;
} flutter_renderer_renderer_own_renderer_t;
typedef struct flutter_renderer_renderer_borrow_renderer_t {
  int32_t __handle;
} flutter_renderer_renderer_borrow_renderer_t;
typedef flutter_renderer_renderer_error_t plugin_error_t;
typedef flutter_renderer_renderer_own_renderer_t plugin_own_renderer_t;
// Imported Functions from `flutter:renderer/alignment`
extern flutter_renderer_alignment_own_alignment_t flutter_renderer_alignment_constructor_alignment(double start, double y);
extern flutter_renderer_alignment_own_alignment_directional_t flutter_renderer_alignment_constructor_alignment_directional(double start, double y);
// Imported Functions from `flutter:renderer/widget`
extern flutter_renderer_widget_own_row_t flutter_renderer_widget_constructor_row(flutter_renderer_widget_list_widget_t *children, flutter_renderer_widget_cross_axis_alignment_t *maybe_cross_axis_alignment, flutter_renderer_widget_main_axis_alignment_t *maybe_main_axis_alignment, flutter_renderer_widget_main_axis_size_t *maybe_main_axis_size, flutter_renderer_widget_text_direction_t *maybe_text_direction, flutter_renderer_widget_text_baseline_t *maybe_text_baseline, flutter_renderer_widget_vertical_direction_t *maybe_vertical_direction);
extern flutter_renderer_widget_own_col_t flutter_renderer_widget_constructor_col(flutter_renderer_widget_list_widget_t *children, flutter_renderer_widget_cross_axis_alignment_t *maybe_cross_axis_alignment, flutter_renderer_widget_main_axis_alignment_t *maybe_main_axis_alignment, flutter_renderer_widget_main_axis_size_t *maybe_main_axis_size, flutter_renderer_widget_text_direction_t *maybe_text_direction, flutter_renderer_widget_text_baseline_t *maybe_text_baseline, flutter_renderer_widget_vertical_direction_t *maybe_vertical_direction);
extern flutter_renderer_widget_own_text_t flutter_renderer_widget_constructor_text(plugin_string_t *data);
// TODO: rich
extern flutter_renderer_widget_own_text_rich_t flutter_renderer_widget_constructor_text_rich(void);
// Imported Functions from `flutter:renderer/renderer`
extern bool flutter_renderer_renderer_method_renderer_render(flutter_renderer_renderer_borrow_renderer_t self, flutter_renderer_renderer_widget_t *widget, flutter_renderer_renderer_error_t *ret);
// Exported Functions from `plugin`
bool plugin_run(plugin_own_renderer_t renderer, plugin_error_t *ret);
// Helper Functions

extern void flutter_renderer_alignment_alignment_drop_own(flutter_renderer_alignment_own_alignment_t handle);
extern flutter_renderer_alignment_borrow_alignment_t flutter_renderer_alignment_borrow_alignment(flutter_renderer_alignment_own_alignment_t handle);
extern void flutter_renderer_alignment_alignment_directional_drop_own(flutter_renderer_alignment_own_alignment_directional_t handle);