dart/src/plugin/plugn.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Binding for plugin
class Plugin {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Plugin(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Plugin.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  flutter_renderer_alignment_own_alignment_t
      flutter_renderer_alignment_constructor_alignment(
    double start,
    double y,
  ) {
    return _flutter_renderer_alignment_constructor_alignment(
      start,
      y,
    );
  }

  late final _flutter_renderer_alignment_constructor_alignmentPtr = _lookup<
      ffi.NativeFunction<
          flutter_renderer_alignment_own_alignment_t Function(ffi.Double,
              ffi.Double)>>('flutter_renderer_alignment_constructor_alignment');
  late final _flutter_renderer_alignment_constructor_alignment =
      _flutter_renderer_alignment_constructor_alignmentPtr.asFunction<
          flutter_renderer_alignment_own_alignment_t Function(
              double, double)>();

  flutter_renderer_alignment_own_alignment_directional_t
      flutter_renderer_alignment_constructor_alignment_directional(
    double start,
    double y,
  ) {
    return _flutter_renderer_alignment_constructor_alignment_directional(
      start,
      y,
    );
  }

  late final _flutter_renderer_alignment_constructor_alignment_directionalPtr =
      _lookup<
              ffi.NativeFunction<
                  flutter_renderer_alignment_own_alignment_directional_t
                      Function(ffi.Double, ffi.Double)>>(
          'flutter_renderer_alignment_constructor_alignment_directional');
  late final _flutter_renderer_alignment_constructor_alignment_directional =
      _flutter_renderer_alignment_constructor_alignment_directionalPtr
          .asFunction<
              flutter_renderer_alignment_own_alignment_directional_t Function(
                  double, double)>();

  flutter_renderer_widget_own_row_t flutter_renderer_widget_constructor_row(
    ffi.Pointer<flutter_renderer_widget_list_widget_t> children,
    ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>
        maybe_cross_axis_alignment,
    ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>
        maybe_main_axis_alignment,
    ffi.Pointer<flutter_renderer_widget_main_axis_size_t> maybe_main_axis_size,
    ffi.Pointer<flutter_renderer_widget_text_direction_t> maybe_text_direction,
    ffi.Pointer<flutter_renderer_widget_text_baseline_t> maybe_text_baseline,
    ffi.Pointer<flutter_renderer_widget_vertical_direction_t>
        maybe_vertical_direction,
  ) {
    return _flutter_renderer_widget_constructor_row(
      children,
      maybe_cross_axis_alignment,
      maybe_main_axis_alignment,
      maybe_main_axis_size,
      maybe_text_direction,
      maybe_text_baseline,
      maybe_vertical_direction,
    );
  }

  late final _flutter_renderer_widget_constructor_rowPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_own_row_t Function(
                  ffi.Pointer<flutter_renderer_widget_list_widget_t>,
                  ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>,
                  ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>,
                  ffi.Pointer<flutter_renderer_widget_main_axis_size_t>,
                  ffi.Pointer<flutter_renderer_widget_text_direction_t>,
                  ffi.Pointer<flutter_renderer_widget_text_baseline_t>,
                  ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>>(
      'flutter_renderer_widget_constructor_row');
  late final _flutter_renderer_widget_constructor_row =
      _flutter_renderer_widget_constructor_rowPtr.asFunction<
          flutter_renderer_widget_own_row_t Function(
              ffi.Pointer<flutter_renderer_widget_list_widget_t>,
              ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>,
              ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>,
              ffi.Pointer<flutter_renderer_widget_main_axis_size_t>,
              ffi.Pointer<flutter_renderer_widget_text_direction_t>,
              ffi.Pointer<flutter_renderer_widget_text_baseline_t>,
              ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>();

  flutter_renderer_widget_own_col_t flutter_renderer_widget_constructor_col(
    ffi.Pointer<flutter_renderer_widget_list_widget_t> children,
    ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>
        maybe_cross_axis_alignment,
    ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>
        maybe_main_axis_alignment,
    ffi.Pointer<flutter_renderer_widget_main_axis_size_t> maybe_main_axis_size,
    ffi.Pointer<flutter_renderer_widget_text_direction_t> maybe_text_direction,
    ffi.Pointer<flutter_renderer_widget_text_baseline_t> maybe_text_baseline,
    ffi.Pointer<flutter_renderer_widget_vertical_direction_t>
        maybe_vertical_direction,
  ) {
    return _flutter_renderer_widget_constructor_col(
      children,
      maybe_cross_axis_alignment,
      maybe_main_axis_alignment,
      maybe_main_axis_size,
      maybe_text_direction,
      maybe_text_baseline,
      maybe_vertical_direction,
    );
  }

  late final _flutter_renderer_widget_constructor_colPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_own_col_t Function(
                  ffi.Pointer<flutter_renderer_widget_list_widget_t>,
                  ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>,
                  ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>,
                  ffi.Pointer<flutter_renderer_widget_main_axis_size_t>,
                  ffi.Pointer<flutter_renderer_widget_text_direction_t>,
                  ffi.Pointer<flutter_renderer_widget_text_baseline_t>,
                  ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>>(
      'flutter_renderer_widget_constructor_col');
  late final _flutter_renderer_widget_constructor_col =
      _flutter_renderer_widget_constructor_colPtr.asFunction<
          flutter_renderer_widget_own_col_t Function(
              ffi.Pointer<flutter_renderer_widget_list_widget_t>,
              ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>,
              ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>,
              ffi.Pointer<flutter_renderer_widget_main_axis_size_t>,
              ffi.Pointer<flutter_renderer_widget_text_direction_t>,
              ffi.Pointer<flutter_renderer_widget_text_baseline_t>,
              ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>();

  flutter_renderer_widget_own_text_t flutter_renderer_widget_constructor_text(
    ffi.Pointer<plugin_string_t> data,
  ) {
    return _flutter_renderer_widget_constructor_text(
      data,
    );
  }

  late final _flutter_renderer_widget_constructor_textPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_own_text_t Function(
                  ffi.Pointer<plugin_string_t>)>>(
      'flutter_renderer_widget_constructor_text');
  late final _flutter_renderer_widget_constructor_text =
      _flutter_renderer_widget_constructor_textPtr.asFunction<
          flutter_renderer_widget_own_text_t Function(
              ffi.Pointer<plugin_string_t>)>();

  flutter_renderer_widget_own_text_rich_t
      flutter_renderer_widget_constructor_text_rich() {
    return _flutter_renderer_widget_constructor_text_rich();
  }

  late final _flutter_renderer_widget_constructor_text_richPtr = _lookup<
          ffi
          .NativeFunction<flutter_renderer_widget_own_text_rich_t Function()>>(
      'flutter_renderer_widget_constructor_text_rich');
  late final _flutter_renderer_widget_constructor_text_rich =
      _flutter_renderer_widget_constructor_text_richPtr
          .asFunction<flutter_renderer_widget_own_text_rich_t Function()>();

  bool flutter_renderer_renderer_method_renderer_render(
    flutter_renderer_renderer_borrow_renderer_t self,
    ffi.Pointer<flutter_renderer_renderer_widget_t> widget,
    ffi.Pointer<flutter_renderer_renderer_error_t> ret,
  ) {
    return _flutter_renderer_renderer_method_renderer_render(
      self,
      widget,
      ret,
    );
  }

  late final _flutter_renderer_renderer_method_renderer_renderPtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(
                  flutter_renderer_renderer_borrow_renderer_t,
                  ffi.Pointer<flutter_renderer_renderer_widget_t>,
                  ffi.Pointer<flutter_renderer_renderer_error_t>)>>(
      'flutter_renderer_renderer_method_renderer_render');
  late final _flutter_renderer_renderer_method_renderer_render =
      _flutter_renderer_renderer_method_renderer_renderPtr.asFunction<
          bool Function(
              flutter_renderer_renderer_borrow_renderer_t,
              ffi.Pointer<flutter_renderer_renderer_widget_t>,
              ffi.Pointer<flutter_renderer_renderer_error_t>)>();

  bool plugin_run(
    plugin_own_renderer_t renderer,
    ffi.Pointer<plugin_error_t> ret,
  ) {
    return _plugin_run(
      renderer,
      ret,
    );
  }

  late final _plugin_runPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(plugin_own_renderer_t,
              ffi.Pointer<plugin_error_t>)>>('plugin_run');
  late final _plugin_run = _plugin_runPtr.asFunction<
      bool Function(plugin_own_renderer_t, ffi.Pointer<plugin_error_t>)>();

  void flutter_renderer_alignment_alignment_drop_own(
    flutter_renderer_alignment_own_alignment_t handle,
  ) {
    return _flutter_renderer_alignment_alignment_drop_own(
      handle,
    );
  }

  late final _flutter_renderer_alignment_alignment_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_alignment_own_alignment_t)>>(
      'flutter_renderer_alignment_alignment_drop_own');
  late final _flutter_renderer_alignment_alignment_drop_own =
      _flutter_renderer_alignment_alignment_drop_ownPtr.asFunction<
          void Function(flutter_renderer_alignment_own_alignment_t)>();

  flutter_renderer_alignment_borrow_alignment_t
      flutter_renderer_alignment_borrow_alignment(
    flutter_renderer_alignment_own_alignment_t handle,
  ) {
    return _flutter_renderer_alignment_borrow_alignment(
      handle,
    );
  }

  late final _flutter_renderer_alignment_borrow_alignmentPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_alignment_borrow_alignment_t Function(
                  flutter_renderer_alignment_own_alignment_t)>>(
      'flutter_renderer_alignment_borrow_alignment');
  late final _flutter_renderer_alignment_borrow_alignment =
      _flutter_renderer_alignment_borrow_alignmentPtr.asFunction<
          flutter_renderer_alignment_borrow_alignment_t Function(
              flutter_renderer_alignment_own_alignment_t)>();

  void flutter_renderer_alignment_alignment_directional_drop_own(
    flutter_renderer_alignment_own_alignment_directional_t handle,
  ) {
    return _flutter_renderer_alignment_alignment_directional_drop_own(
      handle,
    );
  }
